--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,7 +1,11 @@
 /.DS_Store
+/AreYouHappy.class
+/Badger.class
 /CircleRing.class
 /GuesssingPi.class
 /NumberSorter.class
 /SleepyHead.class
-/AreYouHappy.class
-/Badger.class
+/dylanLevel0/
+/CodingExercise.class
+/Level0PracticeExam.class
+/SpotTheError.class
