--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,11 +1,2 @@
-/.DS_Store
-/AreYouHappy.class
-/Badger.class
-/CircleRing.class
-/GuesssingPi.class
-/NumberSorter.class
-/SleepyHead.class
-/dylanLevel0/
-/CodingExercise.class
-/Level0PracticeExam.class
-/SpotTheError.class
+/Code4Life.class
+/FourLoopGauntent.class
