--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,2 +1,13 @@
+/.DS_Store
+/AreYouHappy.class
+/Badger.class
+/CircleRing.class
 /Code4Life.class
+/CodingExercise.class
 /FourLoopGauntent.class
+/GuesssingPi.class
+/MovieRating.class
+/NumberSorter.class
+/SleepyHead.class
+/SpotTheError.class
+/FavoriteColor.class
