--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -4,10 +4,13 @@
 /CircleRing.class
 /Code4Life.class
 /CodingExercise.class
+/FavoriteColor.class
 /FourLoopGauntent.class
 /GuesssingPi.class
 /MovieRating.class
 /NumberSorter.class
 /SleepyHead.class
 /SpotTheError.class
-/FavoriteColor.class
+/Thankfullness.class
+/Valitaion.class
+/Validation.class
