Sdoihf;aoishdfahsdfha;owehf;ordasdfasdfa
Asdf
Hi

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -12,5 +12,7 @@
 /SleepyHead.class
 /SpotTheError.class
 /Thankfullness.class
-/Valitaion.class
 /Validation.class
+/dylanLevel0/
+/CheckPoint1.class
+/Animal.class
